# schindel

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: quickstart.rs
src/: hasher.rs  lib.rs  shingles.rs
